--- a/DATA/Quan/desktop.ini
+++ b/DATA/Quan/desktop.ini
@@ -16,3 +16,15 @@ Screenshot 2025-05-28 220428.png=@Screenshot 2025-05-28 220428,0
 Screenshot 2025-05-28 220423.png=@Screenshot 2025-05-28 220423,0
 Screenshot 2025-05-28 220402.png=@Screenshot 2025-05-28 220402,0
 Screenshot 2025-05-28 220357.png=@Screenshot 2025-05-28 220357,0
+Screenshot 2025-05-28 225557.png=@Screenshot 2025-05-28 225557,0
+Screenshot 2025-05-28 225620.png=@Screenshot 2025-05-28 225620,0
+Screenshot 2025-05-28 225855.png=@Screenshot 2025-05-28 225855,0
+Screenshot 2025-05-28 230002.png=@Screenshot 2025-05-28 230002,0
+Screenshot 2025-05-28 225957.png=@Screenshot 2025-05-28 225957,0
+Screenshot 2025-05-28 225941.png=@Screenshot 2025-05-28 225941,0
+Screenshot 2025-05-28 225927.png=@Screenshot 2025-05-28 225927,0
+Screenshot 2025-05-28 225923.png=@Screenshot 2025-05-28 225923,0
+Screenshot 2025-05-28 225915.png=@Screenshot 2025-05-28 225915,0
+Screenshot 2025-05-28 225909.png=@Screenshot 2025-05-28 225909,0
+Screenshot 2025-05-28 225846.png=@Screenshot 2025-05-28 225846,0
+Screenshot 2025-05-28 225840.png=@Screenshot 2025-05-28 225840,0
