--- a/Test/desktop.ini
+++ b/Test/desktop.ini
@@ -1,2 +1,11 @@
 [LocalizedFileNames]
 Screenshot 2025-05-27 223914.png=@Screenshot 2025-05-27 223914,0
+Screenshot 2025-05-28 230829.png=@Screenshot 2025-05-28 230829,0
+Screenshot 2025-05-28 231246.png=@Screenshot 2025-05-28 231246,0
+Screenshot 2025-05-28 231213.png=@Screenshot 2025-05-28 231213,0
+Screenshot 2025-05-28 231141.png=@Screenshot 2025-05-28 231141,0
+Screenshot 2025-05-28 231041.png=@Screenshot 2025-05-28 231041,0
+Screenshot 2025-05-28 231014.png=@Screenshot 2025-05-28 231014,0
+Screenshot 2025-05-28 230948.png=@Screenshot 2025-05-28 230948,0
+Screenshot 2025-05-28 230925.png=@Screenshot 2025-05-28 230925,0
+Screenshot 2025-05-28 230907.png=@Screenshot 2025-05-28 230907,0
